package com.lermala.lookconstructor.mainapp.data.models;

public class PortfolioItem {
    public String image_id;

    public PortfolioItem() {
    }

    public PortfolioItem(String image_id) {
        this.image_id = image_id;
    }

    public String getImage_id() {
        return image_id;
    }
}
